# Wixen-Mail

./: ACCESSIBILITY.md  ACCESSIBILITY_AUTOMATION_UIA_REQUIREMENTS.md  ACCESSIBILITY_EVALUATION.md  ACCESSIBILITY_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FINAL_SUMMARY.md  HTML_ATTACHMENT_PIPELINE_REQUIREMENTS.md  IMAP_IDLE_PUSH_REQUIREMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SESSION_PHASE5.md  IMPLEMENTATION_SESSION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  MISSING_FUNCTIONALITY_REQUIREMENTS.md  NEXT_PHASE_STATUS.md  NEXT_STEPS.md  PGP_SMIME_PHISHING_REQUIREMENTS.md  PHASE10_REQUIREMENTS.md  PHASE11_REQUIREMENTS.md  PHASE1_2_COMPLETE.md  PHASE1_2_IMPLEMENTATION.md  PHASE2_3_SUMMARY.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_PART1_COMPLETE.md  PHASE5_COMPLETE.md  PHASE5_FINAL_TESTING.md  PHASE5_IMPLEMENTATION_COMPLETE.md  PHASE5_IMPLEMENTATION_GUIDE.md  PHASE5_IMPLEMENTATION_VISUAL.md  PHASE5_PARTIAL_IMPLEMENTATION.md  PHASE5_PLANNING_COMPLETE.md  PHASE5_SESSION_SUMMARY.md  PHASE5_UI_INTEGRATION_SESSION2.md  PHASE5_VISUAL_FEATURE_GUIDE.md  PHASE6_COMPLETE_DOCUMENTATION_PACKAGE.md  PHASE6_COMPLETE_IMPLEMENTATION_GUIDE.md  (+29 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: accessibility_issue.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
data/: dictionary_en.txt
docs/: BETA_RELEASE.md  FEATURES_SUMMARY.md  IMPLEMENTATION_STATUS.md  KEYBOARD_SHORTCUTS.md  PROVIDER_SETUP.md  TROUBLESHOOTING.md  USER_GUIDE.md  accessibility-framework-evaluation.md  changelog.md  contributing.md  getting-started.md  roadmap.md  wxdragon-integration.md
docs/development/: implementation-history.md  requirements-backlog.md  wxdragon-migration.md
installer/: Wixen-Mail-Setup.iss
src/: lib.rs  main.rs
src/application/: accounts.rs  composition.rs  contacts.rs  filters.rs  mail_controller.rs  messages.rs  mod.rs  search.rs
src/common/: error.rs  logging.rs  mod.rs  types.rs
src/data/: account.rs  config.rs  database.rs  email_providers.rs  message_cache.rs  mod.rs  storage.rs
src/data/message_cache/: accounts.rs  contacts.rs  drafts.rs  filters.rs  folders.rs  messages.rs  mod.rs  oauth.rs  outbox.rs  signatures.rs  tags.rs
src/presentation/: accessibility.rs  account_manager.rs  composition.rs  contact_manager.rs  filter_manager.rs  html_renderer.rs  mod.rs  oauth_manager.rs  signature_manager.rs  tag_manager.rs  ui.rs  ui.rs.backup  ui_integrated.rs  ui_types.rs  wx_account_manager.rs  wx_app.rs  wx_compose.rs  wx_managers.rs  wx_oauth.rs  wx_settings.rs
src/presentation/accessibility/: announcements.rs  automation.rs  focus.rs  keyboard.rs  screen_reader.rs  shortcuts.rs
src/service/: attachments.rs  cache.rs  mod.rs  oauth.rs  oauth_credentials.rs  security.rs  spellcheck.rs
src/service/protocols/: imap.rs  mod.rs  pop3.rs  smtp.rs
tests/: integration_tests.rs
