[package]
name = "wixen-mail"
version = "0.1.0"
edition = "2021"
authors = ["Pratik Patel"]
description = "A fully accessible, light-weight mail client built with Rust and WXDragon"
license = "MIT"
repository = "https://github.com/PratikP1/Wixen-Mail"
keywords = ["email", "mail-client", "accessibility", "imap", "smtp"]
categories = ["email", "gui"]

[dependencies]
# Core dependencies for modular architecture
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
dirs = "5.0"

# Additional dependencies will be added as development progresses
# async-imap = "0.9"
# lettre = "0.11"
# tokio = { version = "1", features = ["full"] }
# rusqlite = { version = "0.31", features = ["bundled"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# anyhow = "1.0"
# tracing = "0.1"

[dev-dependencies]
# Test dependencies will be added as needed
