[package]
name = "wixen-mail"
version = "0.1.1-beta.5"
edition = "2021"
authors = ["Pratik Patel"]
description = "A fully accessible, light-weight mail client built with Rust and WXDragon"
license = "MIT"
repository = "https://github.com/PratikP1/Wixen-Mail"
keywords = ["email", "mail-client", "accessibility", "imap", "smtp"]
categories = ["email", "gui"]

[dependencies]
# Core dependencies for modular architecture
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
dirs = "5.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Mail protocol support
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
mail-parser = "0.9"

# UI Framework with accessibility support
eframe = { version = "0.29", features = ["accesskit"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
image = { version = "0.25", features = ["png", "jpeg"] }

# Async communication
async-channel = "2.3"

# Database for persistent caching
rusqlite = { version = "0.32", features = ["bundled"] }

# Encoding for password storage
base64 = "0.22"

# HTML sanitization for security
ammonia = "4.0"
regex = "1.11"
html-escape = "0.2"
aes-gcm = "0.10"
rand = "0.8"

# File picker for attachments
rfd = "0.14"

# Additional dependencies
futures = "0.3"

[dev-dependencies]
# Test dependencies will be added as needed
tokio-test = "0.4"
