[package]
name = "wixen-mail"
version = "0.1.1-beta.9"
edition = "2021"
authors = ["Pratik Patel"]
description = "A fully accessible, light-weight mail client built with Rust and WXDragon"
license = "MIT"
repository = "https://github.com/PratikP1/Wixen-Mail"
keywords = ["email", "mail-client", "accessibility", "imap", "smtp"]
categories = ["email", "gui"]

[dependencies]
# Core
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
dirs = "5.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-channel = "2.3"
futures = "0.3"

# Mail protocol
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
mail-parser = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# UI Framework — wxdragon (wxWidgets bindings)
wxdragon = { version = "=0.9.12", features = ["aui", "richtext"] }

# Database for persistent caching
rusqlite = { version = "0.32", features = ["bundled"] }

# Encoding / security
base64 = "0.22"
ammonia = "4.0"
regex = "1.11"
html-escape = "0.2"
aes-gcm = "0.10"
rand = "0.8"

# Spell checking (Hunspell-compatible, pure Rust)
spellbook = "0.4"

# Open URLs in default browser
open = "5"

# OAuth 2.0 with PKCE support
oauth2 = "4"

# Lightweight HTTP server for OAuth redirect capture
tiny_http = "0.12"

# Secure OS keychain storage for tokens
keyring = "3"

# URL parsing
url = "2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
